# eink-calendar-server

./: .gitignore  Cargo.toml  README.md  shell.FCStd
Eink-Air724/: fp-lib-table  la-pi-cache.lib  la-pi.kicad_pcb  la-pi.pro  la-pi.sch  la_pi_Library.dcm  la_pi_Library.lib  sym-lib-table
Eink-Air724/lapi.pretty/: 2pin.kicad_mod  4g_ant.kicad_mod  Air724.kicad_mod  GDEW042T2.kicad_mod  IPEX.kicad_mod  KEY-01.kicad_mod  MIC-TH_BD4.0-P1.40-D0.4-L-FD.kicad_mod  PinHeader_2x04_P2.54mm_H_SMD.kicad_mod  PinHeader_2x06_P2.54mm_H_SMD.kicad_mod  SIM-SMD_SMC-202-7.kicad_mod  SMD-AHT-21.kicad_mod  SW_4mm_4mm.kicad_mod  TF-015.kicad_mod  Wifi_2.4GHz.kicad_mod  qrcode.kicad_mod
Eink-Air724/lapi.pretty/packages3d/: 724ug.wrl  SW_Push_1P1T_NO_4x4mm_H2.0mm.wrl  USB_C_Receptacle_Palconn_UTC16-G.wrl
eink_spi/: config.lua  eink.lua  main.lua
src/: eink_image.rs  main.rs  weather.rs  weather_json.json
