[package]
name = "eink_calendar_server"
version = "0.1.0"
authors = ["chenxuuu <lolicon@papapoi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = [ "json","gzip","brotli"] }
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
warp = "0.2.5"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
chrono = "0.4.15"
bincode = "1.3.1"
image = "0.23.9"
imageproc ="0.21.0"
rusttype = "0.9.2"
lazy_static = "1.4.0"
tracing = "0.1.19"
tracing-subscriber = "0.2.12"
